--- a/website/index.html
+++ b/website/index.html
@@ -59,6 +59,15 @@
                 for business: <a href="mailto:mwafy092@gmail.com" target="_blank">mwafy092@gmail.com</a>
             </div>
         </footer>
+        <div class="top-photo">
+            <i class="fas fa-user-astronaut"></i>
+        </div>
+        <div class="right-photo right-animation">
+            <i class="fas fa-meteor"></i>
+        </div>
+        <div class="left-photo left-animation">
+            <i class="fas fa-space-shuttle"></i>
+        </div>
     </div>
 
     <script src="app.js"></script>
